// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logic function update via manifest sync should fail for path traversal when builtHandlerPath is updated with absolute path via manifest sync 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "logicFunction": [
        {
          "errors": [
            {
              "code": "INVALID_LOGIC_FUNCTION_INPUT",
              "message": "Built handler path contains unsafe characters",
              "userFriendlyMessage": "Built handler path contains unsafe characters",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "logicFunction",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 logicFunction",
    "summary": {
      "logicFunction": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Built handler path contains unsafe characters",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Logic function update via manifest sync should fail for path traversal when builtHandlerPath is updated with backslash path via manifest sync 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "logicFunction": [
        {
          "errors": [
            {
              "code": "INVALID_LOGIC_FUNCTION_INPUT",
              "message": "Built handler path contains unsafe characters",
              "userFriendlyMessage": "Built handler path contains unsafe characters",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "logicFunction",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 logicFunction",
    "summary": {
      "logicFunction": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Built handler path contains unsafe characters",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Logic function update via manifest sync should fail for path traversal when builtHandlerPath is updated with path traversal via manifest sync 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "logicFunction": [
        {
          "errors": [
            {
              "code": "INVALID_LOGIC_FUNCTION_INPUT",
              "message": "Built handler path contains unsafe characters",
              "userFriendlyMessage": "Built handler path contains unsafe characters",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "logicFunction",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 logicFunction",
    "summary": {
      "logicFunction": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Built handler path contains unsafe characters",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Logic function update via manifest sync should fail for path traversal when sourceHandlerPath is updated with path traversal via manifest sync 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "logicFunction": [
        {
          "errors": [
            {
              "code": "INVALID_LOGIC_FUNCTION_INPUT",
              "message": "Source handler path contains unsafe characters",
              "userFriendlyMessage": "Source handler path contains unsafe characters",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "logicFunction",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 logicFunction",
    "summary": {
      "logicFunction": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Source handler path contains unsafe characters",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;
